force-app/main/default/objects/smagicinteract__Channel_Events__c/smagicinteract__Channel_Events__c.object-meta.xml
<CustomObject>
    <label>Channel Events</label>
    <nameField>
        <label>Mobile</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>