force-app/main/default/objects/smagicinteract__Channel_Events__c/fields/smagicinteract__Channel_Code__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Channel_Code__c</fullName>
    <label>Channel Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>