force-app/main/default/objects/smagicinteract__Channel_Events__c/fields/smagicinteract__Consent__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Consent__c</fullName>
    <label>Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt-In</fullName>
            </value>
            <value>
                <fullName>Opt-Out</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Double Opt-In</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>