force-app/main/default/objects/smagicinteract__Channel_Events__c/fields/smagicinteract__Do_Not_Send_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Do_Not_Send_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Send Confirmation</label>
    <type>Checkbox</type>
</CustomField>