force-app/main/default/objects/smagicinteract__Channel_Events__c/fields/smagicinteract__Event_Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Event_Type__c</fullName>
    <label>Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>