force-app/main/default/objects/smagicinteract__Channel_Events__c/fields/smagicinteract__Message__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>