force-app/main/default/objects/smagicinteract__Channel_Events__c/fields/smagicinteract__Sender__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Sender__c</fullName>
    <label>Sender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>